# cursavesplus

./: Install Cursaves.bat  Install Cursaves.command  README.md  pyproject.toml
.github/workflows/: check-version.yml
cursor_saves/: __init__.py  backends.py  chat_lifecycle.py  cli.py  export.py  github_auth.py  hook_install.py  importer.py  paths.py  profile.py  reload.py  setup_wizard.py  skills_hooks.py  watch.py
cursor_saves/gui/: __init__.py  app.py  runner.py  shortcut.py  state.py  widgets.py
cursor_saves/gui/panels/: __init__.py  autosync.py  dashboard.py  info.py  profile.py  setup.py  skills_hooks.py  sync.py  tools.py
docs/: how-cursor-stores-chats.md
scripts/: install.ps1  install.sh  setup.ps1  setup.sh
tests/: test_chat_lifecycle.py  test_github_auth.py  test_gui_runner.py  test_gui_state.py  test_sync_e2e.py  test_sync_flow.py  test_watch_cursor.py
